# hoodle-cache

./: hoodle-cache.cabal
exe/: hoodle-cache.hs
lib/Application/Hoodle/Cache/: Command.hs  Job.hs  ProgType.hs
